tests/success/default_value_array_variable.tig
let
	type ints = array of int
	var a: ints := f()
	function f(): ints = a
in
	printi(a[1])
end
