tests/fail/function_call_not_function.tig
let
    var a := 1
in
    a(1)
end
